fix: loading box not aligned to dialog height

--- a/src/app/_components/character/character.component.scss
+++ b/src/app/_components/character/character.component.scss
@@ -27,7 +27,7 @@
 // preview
 .dialog-preview {
   font-family: 'Rubik', sans-serif;
-  max-height: 665px;
+  height: 665px;
   overflow: hidden;
 
   img {
